force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/CBCFLD__CBC_Flood_Determination__c.object-meta.xml
<CustomObject>
    <label>CBC Flood Determination</label>
    <nameField>
        <label>CBC Flood Determination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CBC Flood Determination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>