force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Base_Flood_Elevation_Feet_Count__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Base_Flood_Elevation_Feet_Count__c</fullName>
    <label>Base Flood Elevation Feet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>