force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Census_Tract_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Census_Tract_Identifier__c</fullName>
    <description>--DEPRECATED-- use Census_Tract_IdStr</description>
    <label>-D Census Tract Identifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>