force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Census_Tract_IdStr__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Census_Tract_IdStr__c</fullName>
    <label>Census Tract Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>