force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Collateral2__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Collateral2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to new Collateral</description>
    <label>Collateral2</label>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>CBC Flood Determination</relationshipLabel>
    <relationshipName>CBC_Flood_Determination</relationshipName>
    <type>Lookup</type>
</CustomField>