force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Collateral__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral</label>
    <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
    <relationshipLabel>CBC Flood Determination</relationshipLabel>
    <relationshipName>Flood_Certs</relationshipName>
    <type>Lookup</type>
</CustomField>