force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Collateral_State__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Collateral_State__c</fullName>
    <label>Collateral State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>