force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Collateral_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Collateral_Street_Address__c</fullName>
    <label>Collateral Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>