force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__County_FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__County_FIPS_Code__c</fullName>
    <label>County FIPS Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>