force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Fulfillment_Party_City__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Fulfillment_Party_City__c</fullName>
    <label>Fulfillment Party City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>