force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Fulfillment_Party_Phone__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Fulfillment_Party_Phone__c</fullName>
    <label>Fulfillment Party Phone</label>
    <type>Phone</type>
</CustomField>