force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Is_Manual_Process__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Is_Manual_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Process Indicator</label>
    <type>Checkbox</type>
</CustomField>