force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Is_NFIP_Status_Type_Regular__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Is_NFIP_Status_Type_Regular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NFIP Status Type Regular</label>
    <type>Checkbox</type>
</CustomField>