force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Is_Special_Flood_Hazard_Area__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Is_Special_Flood_Hazard_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Flood Hazard Area</label>
    <type>Checkbox</type>
</CustomField>