force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Lender_City__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Lender_City__c</fullName>
    <label>Lender City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>