force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Lender_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Lender_Postal_Code__c</fullName>
    <label>Lender Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>