force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Life_Of_Loan_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Life_Of_Loan_Indicator__c</fullName>
    <label>Life Of Loan Indicator</label>
    <length>3</length>
    <type>Text</type>
</CustomField>