force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Longitude_Number__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Longitude_Number__c</fullName>
    <label>Longitude Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>