force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Manual_Process_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Manual_Process_Completed_Date__c</fullName>
    <label>Manual Process Completed Date</label>
    <type>DateTime</type>
</CustomField>