force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__MSA_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__MSA_Identifier__c</fullName>
    <label>MSA Identifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>