force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__NFIP_Community_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__NFIP_Community_Identifier__c</fullName>
    <label>NFIP Community Identifier</label>
    <length>6</length>
    <type>Text</type>
</CustomField>