force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__NFIP_Community_Name__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__NFIP_Community_Name__c</fullName>
    <label>NFIP Community Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>