force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__NFIP_Community_Participation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__NFIP_Community_Participation_Start_Date__c</fullName>
    <label>NFIP Community Participation Start Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>