force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__NFIP_County__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__NFIP_County__c</fullName>
    <label>NFIP County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>