force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__NFIP_Insurance_Not_Available_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__NFIP_Insurance_Not_Available_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NFIP Insurance Not Available Indicator</label>
    <type>Checkbox</type>
</CustomField>