force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__NFIP_Map_Panel_Suffix_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__NFIP_Map_Panel_Suffix_Identifier__c</fullName>
    <label>NFIP Map Panel Suffix Identifier</label>
    <length>4</length>
    <type>Text</type>
</CustomField>