force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__NFIP_State_Code__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__NFIP_State_Code__c</fullName>
    <label>NFIP State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>