force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Protected_Area_Designation_Date__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Protected_Area_Designation_Date__c</fullName>
    <label>Protected Area Designation Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>