force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Protected_Area_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Protected_Area_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protected Area Indicator</label>
    <type>Checkbox</type>
</CustomField>