force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Special_Flood_Hazard_Area_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Special_Flood_Hazard_Area_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special_Flood Hazard Area Indicator</label>
    <type>Checkbox</type>
</CustomField>