force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__State_FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__State_FIPS_Code__c</fullName>
    <label>State FIPS Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>