force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/fields/CBCFLD__Status__c.field-meta.xml
<CustomField>
    <fullName>CBCFLD__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Processing - Priority Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>