force-app/main/default/objects/CBCFLD__CBC_Flood_Determination__c/listViews/CBCFLD__All.listView-meta.xml
<ListView>
    <fullName>CBCFLD__All</fullName>
    <columns>NAME</columns>
    <columns>CBCFLD__Base_Flood_Elevation_Feet_Count__c</columns>
    <columns>CBCFLD__Census_Tract_Identifier__c</columns>
    <columns>CBCFLD__Collateral__c</columns>
    <columns>CBCFLD__County_FIPS_Code__c</columns>
    <columns>CBCFLD__Flood_Certification_Identifier__c</columns>
    <columns>CBCFLD__Flood_Product_Certify_Date__c</columns>
    <columns>CBCFLD__NFIP_Community_Participation_Status_Type__c</columns>
    <columns>CBCFLD__NFIP_County__c</columns>
    <columns>CBCFLD__NFIP_Flood_Zone_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>